--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
+    "@tailwindcss/vite": "^4.1.7",
     "@toolpad/core": "^0.12.0",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
@@ -19,7 +20,8 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
-    "react-router-dom": "^7.4.1"
+    "react-router-dom": "^7.4.1",
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
@@ -37,6 +39,7 @@
     "json-server": "^1.0.0-beta.3",
     "style-loader": "^4.0.0",
     "typescript": "^5.7.3",
+    "vite": "^6.3.5",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
   }
