--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "^19.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.4.1",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
