--- a/package.json
+++ b/package.json
@@ -1,45 +1,36 @@
 {
-  "name": "reactbasecode",
-  "version": "1.0.0",
+  "name": "project_name",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.js --env env=dev --open",
-    "build": "webpack --config webpack/webpack.config.js --env env=prod",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.3",
-    "@mui/material": "^6.4.3",
     "@tailwindcss/vite": "^4.1.7",
-    "@toolpad/core": "^0.12.0",
-    "axios": "^1.7.9",
-    "formik": "^2.4.6",
-    "react": "^19.0.0",
-    "react-dev-utils": "^12.0.1",
-    "react-dom": "^19.0.0",
-    "react-router": "^7.1.5",
-    "react-router-dom": "^7.4.1",
+    "axios": "^1.9.0",
+    "json-server": "^1.0.0-beta.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.7",
-    "@babel/plugin-transform-runtime": "^7.25.9",
-    "@babel/preset-env": "^7.26.7",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "babel": "^5.8.38",
-    "babel-loader": "^9.2.1",
-    "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.3",
-    "json-server": "^1.0.0-beta.3",
-    "style-loader": "^4.0.0",
-    "typescript": "^5.7.3",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "@eslint/js": "^9.25.0",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.30.1",
+    "vite": "^6.3.5"
   }
 }
